--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -8,7 +8,7 @@
 
 <p> Storage buckets are a way to group files into a meaningful collection and give them context. Buckets also provide more power to decide what kinds of files, what sizes you want to allow in that bucket, whether or not to encrypt the files, scan with antivirus and more. Let's look at how we can create a bucket and configure it to our needs.</p>
 
-<h3><a href="/docs/storage#createBucket" id="createBucket">Create Bucket</h3>
+<h3><a href="/docs/storage#createBucket" id="createBucket">Create Bucket</a></h3>
 
 <p>You can create your bucket from your Appwrite project's dashboard, using any of our server side SDKs or directly using our REST API authenticated using an API Key. In order to create a bucket from the dashboard, access your Storage from your project's left navigation panel. Click <b>Add Bucket</b> button and choose your bucket's name. For convenience, you can also set a custom ID for your bucket instead of auto-generated ID. This will create a new bucket and take you to its settings page, where you can configure various options for your bucket.</p>
 
