--- a/app/views/docs/upgrade.phtml
+++ b/app/views/docs/upgrade.phtml
@@ -35,4 +35,6 @@
 docker-compose exec appwrite migrate</code></pre>
 </div>
 
+<p>The data migration can take longer depending on the amount of data your Appwrite instance contains. The Appwrite migration command uses multi-threading to speed up the process, meaning that adding more CPU cores can help speed up the process.</p>
+
 <p>Once the migration process has completed successfully, you're all set to use the latest version of Appwrite!</p>
