removing repeatitive lines

--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -1,12 +1,8 @@
-<p>Appwrite storage allow you to manage files in your project. It provides APIs to upload, download, delete, and list files. Not only that Appwrite storage service provides APIs to manipulate images. Using the preview endpoint you can crop, resize, rotate, add borders and border radius and select the desired output format for your image.</p>
-
-<p>Appwrite storage service is a simple and easy to use service. You can use it to store images, videos, documents, and other files for your projects.</p>
-
-<p>With version 0.13 of Appwrite, we also have introduced storage buckets as a container for your files so that you can give more context to your files. Storage buckets is similar to Collections we have in our <a href="/docs/database">Database</a> service. The difference is, buckets gives you more control over what types of <b>files</b> you allow, what is the maximum allowed file size, and whether or not to encrypt the files.</p>
+<p>Appwrite storage allow you to manage files in your project. You can use it to store images, videos, documents, and other files for your projects. It provides APIs to upload, download, delete, and list files. Not only that Appwrite storage service provides APIs to manipulate images. Using the preview endpoint you can crop, resize, rotate, add borders and border radius and select the desired output format for your image.</p>
 
 <h2><a href="/docs/storage#bucket" id="bucket">Buckets</a></h2>
 
-<p> Storage buckets are a way to group files into a meaningful collection and give them context. Buckets also provide more power to decide what kinds of files, what sizes you want to allow in that bucket, whether or not to encrypt the files, scan with antivirus and more. Let's look at how we can create a bucket and configure it to your needs.</p>
+<p> With version 0.13 of Appwrite, we also have introduced storage buckets. Storage buckets are similar to Collections we have in our <a href="/docs/database">Database</a> service. The difference is, buckets also provide more power to decide what kinds of files, what sizes you want to allow in that bucket, whether or not to encrypt the files, scan with antivirus and more. Let's look at how we can create a bucket and configure it to your needs.</p>
 
 <h3><a href="/docs/storage#createBucket" id="createBucket">Create Bucket</a></h3>
 
