--- a/app/views/docs/main.phtml
+++ b/app/views/docs/main.phtml
@@ -96,7 +96,7 @@ $getSpecsUrl = function($type, $platform) use ($latestVersion) {
         
         <p>The Appwrite API is organized around REST. Our API has predictable resource-oriented URLs, accepts form-encoded or JSON-encoded request bodies, returns JSON-encoded responses, and uses standard HTTP response codes, authentication, and verbs.</p>
 
-        <p>Specifications for the Appwrite API are available in multiple formats, including Open API 3 for <a href="<?php echo getSpecsUrl('open-api3', 'client'); ?>">clients</a> or <a href="<?php echo getSpecsUrl('open-api3', 'server'); ?>">servers</a> and Swagger2 for <a href="<?php echo getSpecsUrl('swagger2', 'client'); ?>">clients</a> or <a href="<?php echo getSpecsUrl('swagger2', 'server'); ?>">servers</a>.</p>
+        <p>Specifications for the Appwrite API are available in multiple formats, including Open API 3 for <a href="<?php echo $getSpecsUrl('open-api3', 'client'); ?>">clients</a> or <a href="<?php echo $getSpecsUrl('open-api3', 'server'); ?>">servers</a> and Swagger2 for <a href="<?php echo $getSpecsUrl('swagger2', 'client'); ?>">clients</a> or <a href="<?php echo $getSpecsUrl('swagger2', 'server'); ?>">servers</a>.</p>
     </div>
 
     <div class="margin-bottom-large">
