Fixed indexes case

--- a/app/views/docs/database.phtml
+++ b/app/views/docs/database.phtml
@@ -454,15 +454,15 @@ func main() {
     </thead>
     <tbody>
         <tr>
-            <td>Key</td>
+            <td>key</td>
             <td>Plain Index to allow queries.</td>
         </tr>
         <tr>
-            <td>Unique</td>
+            <td>unique</td>
             <td>Unique Index which not allows duplicates.</td>
         </tr>
         <tr>
-            <td>Fulltext</td>
+            <td>fulltext</td>
             <td>For searching within string attributes</td>
         </tr>
     </tbody>
