fix: adjust column widths

--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -125,8 +125,8 @@ $errorCodes = $this->getParam('errorCodes', []);
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
     <thead>
         <tr>
-            <th style="width: 250px">Code</th>
-            <th style="width: 100px">HTTP Status Code</th>
+            <th style="width: 180px">Code</th>
+            <th style="width: 120px">HTTP Status</th>
             <th>Description</th>
         </tr>
     </thead>
