--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -12,7 +12,7 @@
 
 <h4><a href="/docs/storage#permission" id="permission">Permissions</a></h4>
 
-As buckets are very similar to Collections we have in the database, here again, we have a similar permission model. Buckets support either bucket level permission or file level permission to allow different ways to manage access to your buckets and files. Check out the <a href="/docs/permissions">Permissions</a> documentation to learn more about permissions types available.
+<p>As buckets are very similar to Collections we have in the database, here again, we have a similar permission model. Buckets support either bucket level permission or file level permission to allow different ways to manage access to your buckets and files. Check out the <a href="/docs/permissions">Permissions</a> documentation to learn more about permissions types available.</p>
 
 <h4>File Level Permissions</h4>
 <p>
