--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -193,7 +193,7 @@ func main() {
 <p>This enables a wide range of possibilities! You can manipulate images resolution to display appropriately on responsive websites. You can also adjust the image border, background color, and border radius to match the theming of your application. You can do all that without caring about how the image was originally uploaded.
 </p>
 
-<p>Below you can find all different parameters offered by preview endpoint to manipulate image</p>
+<p>Below you can find all the different parameters offered by the preview endpoint to manipulate the image.</p>
 
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
     <thead>
